<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pfSense WOL</string>
    <string name="title_activity_edit">Edit Activity</string>
    <string name="action_settings">Settings</string>
    <string name="mac_address">MAC Address</string>
    <string name="server_interface">Interface</string>
    <string name="server">Server Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="trust_any_cert">Trust any certificate</string>

</resources>
