<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.intangibleobject.pfsensewol.EditActivity">


    <EditText
        android:id="@android:id/text1"
        android:hint="@string/server"
        android:inputType="textWebEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@android:id/text2"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text1"/>

    <EditText
        android:id="@+id/editText1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text2"/>

    <EditText
        android:id="@+id/editText2"
        android:hint="@string/mac_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"/>

    <EditText
        android:id="@+id/editText3"
        android:hint="@string/server_interface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"/>

    <CheckBox
        android:id="@android:id/checkbox"
        android:hint="@string/trust_any_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText3"/>

</RelativeLayout>
